# network-device-config-collector

./: .env.test  .gitignore  3961208240768507234.conf  7957058074536118083.conf  8687381005193741339.conf  CHANGELOG.md  Dockerfile  README.md  config.example.env  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
nos_config_collector/: __init__.py
nos_config_collector/static/: script.js  styles.css
nos_config_collector/templates/: index.html
tests/: __init__.py  conftest.py  test_api.py  test_frontend.py
